--- a/css/public/common.css
+++ b/css/public/common.css
@@ -1,19 +1,7 @@
 /* FONTS */
 @font-face {
-    font-family: FZXiYuan;
-    src: url(../../font/FZXiYuan.ttf);
-}
-
-@font-face {
-   font-family: FZZhunYuan;
-   src: url(../../font/FZZhunYuan.ttf);
-   font-weight: 600;
-}
-
-@font-face {
-   font-family: VerlagBook;
-   src: url(../../font/VerlagBook.otf);
-   font-weight: 600;
+    font-family: SourceHanSansCN;
+    src: url(../../font/SourceHanSansCN-Normal.otf);
 }
 
 /* ANIMATION */
@@ -198,30 +186,6 @@
   animation: fadeOut .6s linear both;
 }
 
-
-@-webkit-keyframes whiteToBlack {
-  0% {background-color: #fff;}
-  50% {background-color: #114766;}
-  100% {background-color: #fff;}
-}
-
-@keyframes whiteToBlack {
-  0% {background-color: #fff;}
-  50% {background-color: #114766;}
-  100% {background-color: #fff;}
-}
-
-@-webkit-keyframes blackToWhite {
-  0% {background-color: #114766;}
-  50% {background-color: #fff;}
-  100% {background-color: #114766;}
-}
-
-@keyframes blackToWhite {
-  0% {background-color: #114766;}
-  50% {background-color: #fff;}
-  100% {background-color: #114766;}
-}
 
 /* RESET */
 body,
@@ -426,7 +390,7 @@ textarea{resize:none;}
 /* BACKGROUND COLOR */
 
 /* ICONS */
-.icons{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: cover;}
+.icons{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
 .icon-time{width: .24rem; height: .24rem; background-image: url(../../images/icon-time.png);}
 .icon-prize{width: .24rem; height: .24rem; background-image: url(../../images/icon-prize.png);}
 .icon-notice{width: .24rem; height: .24rem; background-image: url(../../images/icon-notice.png);}
@@ -434,7 +398,7 @@ textarea{resize:none;}
 .icon-checked{width: .24rem; height: .24rem; background-image: url(../../images/icon-checked.png);}
 
 /* BTNS */
-.btns{display: block; position: relative; cursor: pointer; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: cover;}
+.btns{display: block; position: relative; cursor: pointer; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
 .btn-buy{width: 2.62rem; height: .94rem; background-image: url(../../images/btn-buy.png);}
 .btn-photoWall{width: 1.6rem; height: .4rem; background-image: url(../../images/btn-photoWall.png);}
 .btn-rule{width: 1.46rem; height: .38rem; background-image: url(../../images/btn-rule.png);}
@@ -445,9 +409,11 @@ textarea{resize:none;}
 .btn-submit{width: 2.72rem; height: 1.04rem; background-image: url(../../images/btn-submit.png);}
 .btn-reset{width: 2.72rem; height: 1.04rem; background-image: url(../../images/btn-reset.png);}
 .btn-create{width: 2.72rem; height: 1.04rem; background-image: url(../../images/btn-create.png);}
+.btn-restart{width: 1.86rem; height: .34rem; background-image: url(../../images/btn-restart.png);}
+.btn-home{width: 1.16rem; height: .42rem; background-image: url(../../images/btn-home.png);}
 
 /* WORDS */
-.words{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: cover;}
+.words{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
 .word-landing_title{width: 5.94rem; height: 1.7rem; background-image: url(../../images/word-landing_title.png);}
 .word-tmall_title{width: 4.18rem; height: .48rem; background-image: url(../../images/word-tmall_title.png);}
 .word-theme_title{width: 5.14rem; height: .86rem; background-image: url(../../images/word-theme_title.png);}
@@ -456,8 +422,8 @@ textarea{resize:none;}
 .word-theme_underwater{width: 1.74rem; height: .42rem; background-image: url(../../images/theme-underwater_word.png);}
 .word-photo_tips{width: 2.64rem; height: .88rem; background-image: url(../../images/word-photo_tips.png);}
 .word-save_title{width: 4.18rem; height: .38rem; background-image: url(../../images/word-save_title.png)}
-.word-wall_title{width: 2.78rem; height: .4rem; background-image: url(../../images/word-wall_title.png);}
-.word-playbill_title{width: 2.78rem; height: .4rem; background-image: url(../../images/word-playbill_title.png);}
+.word-wall_title{width: 2.78rem; height: .38rem; background-image: url(../../images/word-wall_title.png);}
+.word-playbill_title{width: 4.74rem; height: .82rem; background-image: url(../../images/word-playbill_title.png);}
 
 /* POP */
 .pop{display: none; position: fixed; left: 0; right: 0; top: 0; bottom: 0; z-index: 1000; background-color: rgba(0, 0, 0, .8); opacity: 0;}
@@ -504,23 +470,20 @@ textarea{resize:none;}
   transform: translate(0, 0);
 }
 .pop .pop-rule .pop-rule_box{overflow: auto; width: 100%; height: 100%;}
-.pop .pop-rule .rule-banner{position: relative; width: 6.4rem; height: 4.27rem; margin-top: .2rem;}
+.pop .pop-rule .rule-banner{position: relative; width: 100%; height: 4.27rem; margin-top: .2rem;}
 .pop .pop-rule .rule-banner_anim{
   -webkit-animation: fadeOut 3s linear both infinite alternate;
   animation: fadeOut 3s linear both infinite alternate;
 }
-.pop .pop-rule .rule-banner li:first-child{
-  -webkit-animation: blackToWhite 6s linear both infinite alternate;
-  animation: blackToWhite 6s linear both infinite alternate;
+.pop .pop-rule .rule-banner img{display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%; opacity: 0;}
+.pop .pop-rule .rule-banner img{
+  -webkit-transition: opacity .6s;
+  transition: opacity .6s;
 }
-.pop .pop-rule .rule-banner li:last-child{
-  -webkit-animation: whiteToBlack 6s linear both infinite alternate;
-  animation: whiteToBlack 6s linear both infinite alternate;
-}
-
-.pop .pop-rule .rule-banner img{display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
+.pop .pop-rule .rule-banner img.active{opacity: 1;}
 .pop .pop-rule .rule-banner ul{position: absolute; left: .1rem; right: .1rem; bottom: .1rem;}
 .pop .pop-rule .rule-banner li{width: .1rem; height: .1rem; margin: 0 .05rem; border-radius: 50%; background-color: #fff;}
+.pop .pop-rule .rule-banner li.active{background-color: #114766;}
 .pop .pop-rule .prize-notice{padding: .2rem 0 .4rem; font-size: .2rem; line-height: .4rem; text-align: left;}
 .pop .pop-rule .prize-notice label{position: relative; font-size: .2rem; line-height: .3rem; text-align: center;}
 .pop .pop-rule .prize-notice label:before{content: '.'; display: block; position: absolute; right: -.28rem; top: 50%; width: 0; height: 0; margin-top: -.1rem; border-left: .1rem solid transparent; border-right: .1rem solid transparent; border-top: .16rem solid #597e93; text-indent: -99rem;}
