--- a/css/views/index.css
+++ b/css/views/index.css
@@ -130,7 +130,7 @@
 .stage-photo .photo-item_border{left: .3rem; top: 7.4rem; width: .45rem; height: .85rem; background-image: url(../../images/theme/theme-border.png);}
 .stage-photo .photo-item_slogan{left: 4.3rem; top: .5rem; width: 1.4rem; height: 2.3rem; background-image: url(../../images/theme/theme-slogan.png);}
 .stage-photo .photo-item_QRcode{left: 4.95rem; top: 7.4rem; width: .78rem; height: .8rem; background-image: url(../../images/theme/theme-QRcode.png);}
-.stage-photo .photo-item_tag{left: 4.84rem; top: 8.22rem; width: 1rem; height: .57rem; background-image: url(../../images/theme/theme-tag.png);}
+.stage-photo .photo-item_tag{left: 4.52rem; top: 7.95rem; width: 1.65rem; height: 1.1rem; background-image: url(../../images/theme/theme-tag.png);}
 .stage-photo .photo-sandbeach1_mask{left: 1.85rem; bottom: 0; width: 2.56rem; height: 7.32rem; background-image: url(../../images/theme/theme-sandbeach1_mask.png);}
 .stage-photo .photo-sandbeach2_mask{left: 2rem; bottom: 0; width: 2.3rem; height: 7.53rem; background-image: url(../../images/theme/theme-sandbeach2_mask.png);}
 .stage-photo .photo-pool1_mask{left: 1.9rem; bottom: 1.1rem; width: 3.72rem; height: 4.4rem; background-image: url(../../images/theme/theme-pool1_mask.png);}
