解决： 1. 透明图片判断 2. 新增更换场景按钮 3. 新增敬请期待

--- a/css/public/common.css
+++ b/css/public/common.css
@@ -268,6 +268,8 @@ textarea{resize:none;}
 
 .stage-list{display: none;}
 
+.hide{display: none!important;}
+
 .tab{position: absolute; left: .1rem; top: .45rem;}
 .tab li{position: relative; padding: 0 .2rem}
 .tab li:first-child:before{content: '.'; position: absolute; right: 0; top: 50%; width: .03rem; height: .46rem; background-color: #224663; text-indent: -999rem;}
@@ -452,9 +454,11 @@ textarea{resize:none;}
 .btn-create{width: 2.72rem; height: 1.04rem; background-image: url(../../images/btn-create.png);}
 .btn-restart{width: 1.86rem; height: .34rem; background-image: url(../../images/btn-restart.png);}
 .btn-home{width: 1.16rem; height: .42rem; background-image: url(../../images/btn-home.png);}
+.btn-change{width: 2.72rem; height: 1.04rem; background-image: url(../../images/btn-change.png);}
 
 /* WORDS */
 .words{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
+.word-coming_title{width: 5rem; height: .86rem; background-image: url(../../images/word-coming_title.png);}
 .word-landing_title{width: 5.94rem; height: 1.7rem; background-image: url(../../images/word-landing_title.png);}
 .word-tmall_title{width: 4.18rem; height: .48rem; background-image: url(../../images/word-tmall_title.png);}
 .word-theme_title{width: 5.14rem; height: .86rem; background-image: url(../../images/word-theme_title.png);}
