--- a/css/public/common.css
+++ b/css/public/common.css
@@ -444,8 +444,9 @@ textarea{resize:none;}
 .btn-photoWall_disable{width: 1.6rem; height: .4rem; background-image: url(../../images/btn-photoWall_disable.png);}
 .btn-playbill{width: 2.24rem; height: .42rem; background-image: url(../../images/btn-playbill.png);}
 .btn-playbill_disable{width: 2.24rem; height: .42rem; background-image: url(../../images/btn-playbill_disable.png);}
-.btn-rule{width: 1.46rem; height: .38rem; background-image: url(../../images/btn-rule.png);}
-.btn-start{width: 2.62rem; height: .94rem; background-image: url(../../images/btn-start.png);}
+.btn-rule{width: 2rem; height: .4rem; background-image: url(../../images/btn-rule.png);}
+.btn-start,
+.btn-pop_start{width: 2.62rem; height: .94rem; background-image: url(../../images/btn-start.png);}
 .btn-close{width: .58rem; height: .58rem; background-image: url(../../images/btn-close.png);}
 .btn-decathlon{width: 2.62rem; height: .94rem; background-image: url(../../images/btn-decathlon.png);}
 .btn-tmall{width: 2.62rem; height: .94rem; background-image: url(../../images/btn-tmall.png);}
@@ -512,12 +513,12 @@ textarea{resize:none;}
 .pop .pop-tmall_box p{margin: 0 auto;}
 .pop .pop-tmall_box p{margin-top: .2rem; color: #114766; font-size: .24rem; line-height: .34rem; text-align: center;}
 
-.pop .pop-rule{position: absolute; left: 0; right: 0; top: 0; bottom: 0; padding: .6rem; background-color: #fff; color: #114766;}
+.pop .pop-rule{overflow: auto; position: absolute; left: 0; right: 0; top: 0; bottom: 0; width: 100%; height: 100%; background-color: #fff; color: #114766;}
 .pop section.pop-rule{
   -webkit-transform: translate(0, 0);  
   transform: translate(0, 0);
 }
-.pop .pop-rule .pop-rule_box{overflow: auto; width: 100%; height: 100%;}
+.pop .pop-rule .pop-rule_box{padding: .6rem .6rem 0}
 .pop .pop-rule .rule-banner{position: relative; width: 100%; height: 4.27rem; margin-top: .2rem;}
 .pop .pop-rule .rule-banner_anim{
   -webkit-animation: fadeOut 3s linear both infinite alternate;
@@ -552,6 +553,7 @@ textarea{resize:none;}
 .pop .pop-rule p{text-align: center;}
 .pop .pop-rule h2{font-weight: 700; font-size: .44rem; line-height: .54rem;}
 .pop .pop-rule h3{margin-top: .5rem; font-size: .3rem; line-height: .4rem;}
+.pop .pop-rule h3 .icons{margin-right: .1rem;}
 .pop .pop-rule p{margin-top: .2rem; font-size: .26rem; line-height: .36rem;}
 .pop .pop-rule p span{color: #e28080; font-size: .2rem; line-height: .3rem;}
 .pop .pop-rule dl{padding-top: .2rem;}
@@ -560,6 +562,7 @@ textarea{resize:none;}
 .pop .pop-rule dd span{color: #597e93; font-size: .2rem; line-height: .4rem;}
 .pop .pop-rule ul{padding-top: .2rem;}
 .pop .pop-rule li{font-size: .26rem; line-height: .46rem;}
+.pop .pop-rule_btn{width: 100%; height: 2rem; background: url(../../images/bg-pop_rule.jpg) no-repeat center top; background-size: 100% 100%;}
 
 .pop .pop-tips{overflow: hidden; width: 4.24rem; height: 1.64rem; border-radius: .1rem; background-color: #e7eef8;}
 .pop .pop-tips_box{width: 100%; height: 100%;}
