--- a/css/public/common.css
+++ b/css/public/common.css
@@ -456,6 +456,7 @@ textarea{resize:none;}
 .btn-restart{width: 1.86rem; height: .34rem; background-image: url(../../images/btn-restart.png);}
 .btn-home{width: 1.16rem; height: .42rem; background-image: url(../../images/btn-home.png);}
 .btn-change{width: 2.72rem; height: 1.04rem; background-image: url(../../images/btn-change.png);}
+.btn-pop_copy{width: 2.3rem; height: .82rem; background-image: url(../../images/btn-copy.png);}
 
 /* WORDS */
 .words{display: block; position: relative; border: none; background-repeat: no-repeat; background-position: 0 0; text-indent: -99rem; background-size: 100% 100%;}
@@ -473,6 +474,7 @@ textarea{resize:none;}
 .word-tips_upload{width: 2.38rem; height: .48rem; background-image: url(../../images/word-tips_upload.png);}
 .word-loading_title{width: 2.7rem; height: 1.3rem; background-image: url(../../images/word-loading_title.png);}
 .word-tips_error{width: 5.76rem; height: 1.48rem; background-image: url(../../images/word-tips_error.png);}
+.word-tips_copy{width: 1.88rem; height: .42rem; background-image: url(../../images/word-tips_copy.png);}
 
 /* POP */
 .pop{display: none; position: fixed; left: 0; right: 0; top: 0; bottom: 0; z-index: 1000; background-color: rgba(0, 0, 0, .8); opacity: 0;}
@@ -502,16 +504,17 @@ textarea{resize:none;}
 .pop .pop-buy_box ul{height: 100%;}
 .pop .pop-buy_box li{margin: 0 .1rem;}
 
-.pop .pop-tmall{overflow: hidden; width: 5.96rem; height: 7.64rem; border-radius: .1rem; background-color: #e7eef8;}
+.pop .pop-tmall{overflow: hidden; width: 5.96rem; height: 8.5rem; border-radius: .1rem; background-color: #e7eef8;}
 .pop .pop-tmall_box{width: 100%; height: 100%;}
 .pop .pop-tmall_box div:first-child{width: 100%; height: 5.86rem; min-height: 5.86rem; background: url(../../images/bg-pop_buy.png) no-repeat center center; background-size: cover;}
-.pop .pop-tmall_box div:last-child{height: 100%; padding-top: .3rem;}
+.pop .pop-tmall_box div:last-child{height: 100%;}
 .pop .pop-tmall_box div:last-child{
   box-sizing: border-box;
 }
 .pop .pop-tmall_box h3,
 .pop .pop-tmall_box p{margin: 0 auto;}
 .pop .pop-tmall_box p{margin-top: .2rem; color: #114766; font-size: .24rem; line-height: .34rem; text-align: center;}
+.pop .pop-tmall .btn-pop_copy{margin-top: .2rem;}
 
 .pop .pop-rule{overflow: auto; position: absolute; left: 0; right: 0; top: 0; bottom: 0; width: 100%; height: 100%; background-color: #fff; color: #114766;}
 .pop section.pop-rule{
@@ -584,6 +587,9 @@ textarea{resize:none;}
   -webkit-transform: translate(0 , 0);
   transform: translate(0 , 0);
 }
+
+.pop .pop-copy{overflow: hidden; width: 4.24rem; height: 1.64rem; border-radius: .1rem; background-color: #e7eef8;}
+.pop .pop-copy_box{width: 100%; height: 100%;}
 
 /* FORM */
 
