--- a/css/views/index.css
+++ b/css/views/index.css
@@ -151,6 +151,7 @@
 .stage-photo .photo-item_cursor.pool2{left: 4.1rem;}
 .stage-photo .photo-item_cursor.underwater1,
 .stage-photo .photo-item_cursor.underwater2{left: 3rem;}
+.stage-photo .word-tips_photo{margin-bottom: .15rem;}
 
 .stage-save div{width: 6.17rem; height: 9.06rem;}
 .stage-save div{
