--- a/css/public/common.css
+++ b/css/public/common.css
@@ -475,6 +475,9 @@ textarea{resize:none;}
 .word-loading_title{width: 2.7rem; height: 1.3rem; background-image: url(../../images/word-loading_title.png);}
 .word-tips_error{width: 5.76rem; height: 1.48rem; background-image: url(../../images/word-tips_error.png);}
 .word-tips_copy{width: 1.88rem; height: .42rem; background-image: url(../../images/word-tips_copy.png);}
+.word-tips_photo{width: 5.22rem; height: .4rem; background-image: url(../../images/word-tips_photo.png);}
+.word-guide_title1{width: 5.78rem; height: 1.22rem; background-image: url(../../images/word-guide_title1.png);}
+.word-guide_title2{width: 5.22rem; height: 1.14rem; background-image: url(../../images/word-guide_title2.png);}
 
 /* POP */
 .pop{display: none; position: fixed; left: 0; right: 0; top: 0; bottom: 0; z-index: 1000; background-color: rgba(0, 0, 0, .8); opacity: 0;}
@@ -590,6 +593,14 @@ textarea{resize:none;}
 
 .pop .pop-copy{overflow: hidden; width: 4.24rem; height: 1.64rem; border-radius: .1rem; background-color: #e7eef8;}
 .pop .pop-copy_box{width: 100%; height: 100%;}
+
+.pop .pop-guide{width: 100%; height: 11rem;}
+.pop .pop-guide_box{position: relative; width: 100%; height: 100%;}
+.pop .word-guide_title1{position: absolute; left: 50%; top: 5.46rem;}
+.pop .word-guide_title2{position: absolute; left: 50%; top: 1rem;}
+.pop .pop-guide_slogan div{position: absolute; left: 50%; top: 6.98rem; width: 5.98rem; height: 1.8rem; background: url(../../images/theme-guide_slogan.png) no-repeat center center; background-size: 100% 100%;}
+.pop .pop-guide_photo div{position: absolute; left: 50%; top: 2.14rem; width: 5.02rem; height: 7.42rem;}
+.pop .pop-guide_photo img{display: block; width: 100%; height: 100%;}
 
 /* FORM */
 
